--- a/Navbar.html
+++ b/Navbar.html
@@ -3,7 +3,7 @@
         <div class="menu-item w-100 p-3 mx-auto">
             <img src="images/2.png" width="100%" class="p-3" />
         </div>
-        <div onclick="window.location.href='ViewDiscussions.aspx'" class="menu-item w-100 p-3 my-2">
+        <div onclick="window.location.href='Home.aspx'" class="menu-item w-100 p-3 my-2">
             <img src="images/home.svg" width="25" class="mx-3" /> Home
         </div>
         <div onclick="window.location.href='DoubtPost.aspx'" class="menu-item w-100 p-3 my-2">
